project1/test/test_11710123_03.out
Error type A at Line 3: unknown lexeme 3a
Error type B at Line 5: Missing specifier 
