project1/test/test_11710123_03.spl
int func_1(int a)
{
  return 3a;
}
int func_2(int x, y)
{
  return (x + y);
}